--- a/.github/ISSUE_TEMPLATE/addurl.yml
+++ b/.github/ISSUE_TEMPLATE/addurl.yml
@@ -1,6 +1,6 @@
 name: Request adding a New URL
 description: Add a usable URL for github-readme-stats
-labels: New-URL, Pending
+labels: Add-URL, Pending
 title: New URL Request
 body:
   - type: markdown
