--- a/.github/ISSUE_TEMPLATE/automatedaddurl.yml
+++ b/.github/ISSUE_TEMPLATE/automatedaddurl.yml
@@ -25,7 +25,7 @@ body:
 
   - type: input
     attributes:
-      label:
+      label: Markdown Input
       placeholder:
       description:
     validations:
